deployment/kubernates/namespace.yml
# namespace.yml

apiVersion: v1
kind: Namespace
metadata:
  name: censor-management-space
