deployment/kubernates/loadbalancer.yml
# loadbalancer.yml

apiVersion: v1
kind: Service
metadata:
  name: censor-influxdb-loadbalancer-service
  namespace: censor-management-space
spec:
  selector:
    app: influxdb
  ports:
    - protocol: TCP
      port: 8086
      targetPort: 8086
  type: LoadBalancer

---

apiVersion: v1
kind: Service
metadata:
  name: censor-redis-loadbalancer-service
  namespace: censor-management-space
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  type: LoadBalancer
